# Platemaker-qt

./: .gitignore  CLA.md  CMakeLists.txt  CONTRIBUTING.md  Platemaker.iss  README.md  app.rc  canvasprofiledialog.cpp  canvasprofiledialog.h  canvasprofiledialog.ui  imagetile.cpp  imagetile.h  imagetile.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  managecanvasprofilesdialog.cpp  managecanvasprofilesdialog.h  managecanvasprofilesdialog.ui  manageoutputprofilesdialog.h  manageoutputprofilesdialog.ui  outputformatoptionswidget.h  outputformatoptionswidget.ui  outputprofiledialog.cpp  outputprofiledialog.h  outputprofiledialog.ui  project.cpp  project.h  project.ui  projectitem.cpp  renderworker.h  templatesdialog.cpp  templatesdialog.ui
app/: app.rc  main.cpp  resources.qrc
app/menubaricontextstyle/: menubaricontextstyle.cpp  menubaricontextstyle.hpp
docs/: CHANGELOG.md  CHEATSHEET.md  SPECIFICATION.md  TODO.md
mainwindow/: about.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  profiles.cpp  projects.cpp  render.cpp  renderbatch.cpp  templates.cpp  workspace.cpp
widgets/aboutdialog/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui
widgets/canvasprofiledialog/: canvasprofiledialog.cpp  canvasprofiledialog.h  canvasprofiledialog.ui
widgets/imagetile/: imagetile.cpp  imagetile.h  imagetile.ui
widgets/managecanvasprofilesdialog/: managecanvasprofilesdialog.cpp  managecanvasprofilesdialog.h
widgets/manageoutputprofilesdialog/: manageoutputprofilesdialog.cpp  manageoutputprofilesdialog.h  manageoutputprofilesdialog.ui
widgets/outputformatoptionswidget/: outputformatoptionswidget.cpp  outputformatoptionswidget.h
widgets/outputprofiledialog/: outputprofiledialog.cpp  outputprofiledialog.h
widgets/project/: input.cpp  output.cpp  project.cpp  project.h  project.ui
widgets/renderworker/: renderworker.cpp  renderworker.h
widgets/templatesdialog/: templatesdialog.cpp  templatesdialog.h
